test/JDBC/expected/four-part-names-vu-verify.out
CREATE TABLE fpn_table (a int, b varchar(10))
GO

SELECT * FROM bbf_fpn_server.master.dbo.fpn_table
GO
~~START~~
int#!#varchar
~~END~~


INSERT INTO fpn_table VALUES (1, 'one')
INSERT INTO fpn_table VALUES (2, 'two')
INSERT INTO fpn_table VALUES (3, 'three')
INSERT INTO fpn_table VALUES (4, 'four')
GO
~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ROW COUNT: 1~~


-- server_name.database_name.schema_name.object_name (table)
SELECT a, b FROM bbf_fpn_server.master.dbo.fpn_table
GO
~~START~~
int#!#varchar
1#!#one
2#!#two
3#!#three
4#!#four
~~END~~


-- server_name.database_name.schema_name.object_name (view)
SELECT * FROM bbf_fpn_server.master.sys.data_spaces
GO
~~START~~
varchar#!#int#!#char#!#nvarchar#!#bit#!#bit
PRIMARY#!#1#!#FG#!#ROWS_FILEGROUP#!#1#!#0
~~END~~


-- server_name.database_name..object_name
SELECT a + 1, b FROM bbf_fpn_server.master..fpn_table
GO
~~START~~
int#!#varchar
2#!#one
3#!#two
4#!#three
5#!#four
~~END~~


-- server_name..schema_name.object_name
SELECT * FROM bbf_fpn_server..sys.data_spaces
GO
~~START~~
varchar#!#int#!#char#!#nvarchar#!#bit#!#bit
PRIMARY#!#1#!#FG#!#ROWS_FILEGROUP#!#1#!#0
~~END~~


-- server_name...object_name
SELECT a*2, REVERSE(b) FROM bbf_fpn_server...fpn_table
GO
~~START~~
int#!#text
2#!#eno
4#!#owt
6#!#eerht
8#!#ruof
~~END~~


-- Invalid server name (Should throw error)
SELECT * FROM invalid_server.master.dbo.fpn_table
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: server "invalid_server" does not exist)~~


-- Invalid database name (Should throw error)
SELECT * FROM bbf_fpn_server.invalid_db.dbo.fpn_table
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: TDS client library error: Msg #: 33557097, Msg state: 1, Msg: database "invalid_db" does not exist. Make sure that the name is entered correctly., Server: BABELFISH, Process: , Line: 1, Level: 16)~~


-- Invalid schema name (Should throw error)
SELECT * FROM bbf_fpn_server.master.invalid_schema.fpn_table
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: TDS client library error: Msg #: 33557097, Msg state: 1, Msg: relation "master_invalid_schema.fpn_table" does not exist, Server: BABELFISH, Process: , Line: 1, Level: 16)~~


-- Invalid object name (Should throw error)
SELECT * FROM bbf_fpn_server.master.dbo.invalid_fpn_table
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: TDS client library error: Msg #: 33557097, Msg state: 1, Msg: relation "master_dbo.invalid_fpn_table" does not exist, Server: BABELFISH, Process: , Line: 1, Level: 16)~~


-- four part object is a procedure (Should throw error)
EXEC bbf_fpn_server.master.dbo.sp_linkedserver
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: Remote procedure/function reference with 4-part object name is not currently supported in Babelfish)~~


-- INSERT should not work with four-part object name
INSERT INTO bbf_fpn_server.master.dbo.fpn_table VALUES (5, 'five')
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: INSERT on a 4-part object name is not yet supported in Babelfish)~~


-- UPDATE should not work with four-part object name
UPDATE bbf_fpn_server.master.dbo.fpn_table SET b = 'Update one' WHERE a = 1
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: UPDATE on a 4-part object name is not yet supported in Babelfish)~~


-- DELETE should not work with four-part object name
DELETE FROM bbf_fpn_server.master.dbo.fpn_table WHERE a = 1
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: DELETE on a 4-part object name is not yet supported in Babelfish)~~


-- CREATE VIEW using four-part names
CREATE VIEW four_part_names_vu_verify_view AS SELECT * FROM bbf_fpn_server.master.dbo.fpn_table
GO

SELECT * FROM four_part_names_vu_verify_view
GO
~~START~~
int#!#varchar
1#!#one
2#!#two
3#!#three
4#!#four
~~END~~


-- INSERT INTO ... SELECT
CREATE TABLE fpn_table_insert_into (a int, b varchar(10))
GO

INSERT INTO fpn_table_insert_into SELECT * FROM bbf_fpn_server.master.dbo.fpn_table WHERE a < 4
GO
~~ROW COUNT: 3~~


SELECT * FROM fpn_table_insert_into
GO
~~START~~
int#!#varchar
1#!#one
2#!#two
3#!#three
~~END~~


-- SELECT INTO
SELECT * INTO fpn_table_select_into FROM bbf_fpn_server.master.dbo.fpn_table
GO

SELECT * FROM fpn_table_select_into
GO
~~START~~
int#!#varchar
1#!#one
2#!#two
3#!#three
4#!#four
~~END~~


-- JOIN between local and remote table
SELECT fpn_table.*, t2.*
FROM fpn_table_insert_into fpn_table
LEFT JOIN 
bbf_fpn_server.master.dbo.fpn_table t2
ON fpn_table.a = t2.a
GO
~~START~~
int#!#varchar#!#int#!#varchar
1#!#one#!#1#!#one
2#!#two#!#2#!#two
3#!#three#!#3#!#three
~~END~~


SELECT fpn_table.a, t2.*
FROM bbf_fpn_server.master.dbo.fpn_table fpn_table
LEFT JOIN 
fpn_table_insert_into t2
ON fpn_table.a = t2.a
GO
~~START~~
int#!#int#!#varchar
1#!#1#!#one
2#!#2#!#two
3#!#3#!#three
4#!#<NULL>#!#<NULL>
~~END~~


-- JOIN between two remote tables
SELECT fpn_table.*, t2.a, t2.b
FROM bbf_fpn_server.master.dbo.fpn_table fpn_table
LEFT JOIN 
bbf_fpn_server.master.dbo.fpn_table_insert_into t2
ON fpn_table.a = t2.a
GO
~~START~~
int#!#varchar#!#int#!#varchar
1#!#one#!#1#!#one
2#!#two#!#2#!#two
3#!#three#!#3#!#three
4#!#four#!#<NULL>#!#<NULL>
~~END~~


-- UPDATE on local table with JOIN containing remote table
UPDATE Table_A
SET
Table_A.a = Table_B.a + 100,
Table_A.b = Table_B.b + CAST(Table_B.a AS varchar(5))
FROM
fpn_table_insert_into AS Table_A
INNER JOIN bbf_fpn_server.master.dbo.fpn_table AS Table_B
ON Table_A.a = Table_B.a
WHERE
Table_A.a < 3
GO
~~ROW COUNT: 2~~


SELECT * FROM fpn_table_insert_into
GO
~~START~~
int#!#varchar
3#!#three
101#!#one1
102#!#two2
~~END~~


-- DELETE on local table with JOIN containing remote table
DELETE Table_A
FROM
fpn_table_select_into AS Table_A
INNER JOIN bbf_fpn_server.master.dbo.fpn_table AS Table_B
ON Table_A.a = Table_B.a
WHERE
(Table_A.a + Table_B.a) % 4 = 0
GO
~~ROW COUNT: 2~~


SELECT * FROM fpn_table_select_into
GO
~~START~~
int#!#varchar
1#!#one
3#!#three
~~END~~


-- In CTE
WITH cte_table_for_fpn (a)
AS
(
        SELECT a from bbf_fpn_server.master.dbo.fpn_table
)
SELECT AVG(a) FROM cte_table_for_fpn
GO
~~START~~
int
2
~~END~~


-- In Subquery
SELECT * FROM fpn_table_insert_into WHERE a > (SELECT MAX(a) FROM bbf_fpn_server.master.dbo.fpn_table)
GO
~~START~~
int#!#varchar
101#!#one1
102#!#two2
~~END~~


SELECT * FROM fpn_table_select_into WHERE b IN (SELECT b FROM bbf_fpn_server.master.dbo.fpn_table)
GO
~~START~~
int#!#varchar
1#!#one
3#!#three
~~END~~


-- In Correlated subquery
SELECT * FROM fpn_table_insert_into WHERE EXISTS (SELECT * FROM bbf_fpn_server.master.dbo.fpn_table as fpn_table_alias WHERE fpn_table_alias.a = fpn_table_insert_into.a)
GO
~~START~~
int#!#varchar
3#!#three
~~END~~



-- Try SQL Injection
-- We cannot directly inject SQL because it will break T-SQL database identifier rules
-- We have to surround the SQL in double quotes ("") or square brackets ([]) if we want to even attempt that
-- All cases should throw an error
-- To allow identifiers be specified with double quotes
SET QUOTED_IDENTIFIER ON
GO

-- SQL Injection in server name
-- Try to inject SQL such that the final rewritten query looks like:
-- select * from openquery('bbf_fpn_server', 'select * from fpn_table') select * from openquery('bbf_fpn_server', 'select * from master.sys.databases')
-- Will throw error: servername is invalid
select * from [bbf_fpn_server'', ''select * from fpn_table'') select * from openquery(''bbf_fpn_server].master.sys.databases
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: server "bbf_fpn_server', 'select * from fpn_table') select * from openquery('bbf_fpn_server" does not exist)~~


select * from "bbf_fpn_server'', ''select * from fpn_table'') select * from openquery(''bbf_fpn_server".master.sys.databases
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: server "bbf_fpn_server', 'select * from fpn_table') select * from openquery('bbf_fpn_server" does not exist)~~


-- SQL Injection in database name
-- Try to inject SQL such that the final rewritten query looks like:
-- select * from openquery('bbf_fpn_server', 'select * from fpn_table') select * from openquery('bbf_fpn_server', 'select * from master.sys.databases')
-- Will throw error: database name is invalid
select * from bbf_fpn_server.[fpn_table'') select * from openquery(''bbf_fpn_server'', ''select * from master].sys.databases
GO
~~START~~
varchar#!#int#!#int#!#varbinary#!#datetime#!#tinyint#!#varchar#!#tinyint#!#nvarchar#!#bit#!#bit#!#bit#!#tinyint#!#nvarchar#!#bit#!#bit#!#bit#!#tinyint#!#nvarchar#!#bit#!#tinyint#!#nvarchar#!#tinyint#!#nvarchar#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#uniqueidentifier#!#bit#!#tinyint#!#nvarchar#!#bit#!#bit#!#bit#!#bit#!#uniqueidentifier#!#uniqueidentifier#!#int#!#smallint#!#nvarchar#!#int#!#nvarchar#!#bit#!#bit#!#smallint#!#tinyint#!#nvarchar#!#int#!#int#!#nvarchar#!#bit#!#bit#!#bit#!#bit#!#bit#!#int#!#nvarchar#!#nvarchar#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit
~~ERROR (Code: 33557097)~~

~~ERROR (Message: TDS client library error: Msg #: 911, Msg state: 1, Msg: database "fpn_table') select * from openq8c86d09e50d4f800f5a8c351ddbe1b23" does not exist, Server: BABELFISH, Process: , Line: 1, Level: 16)~~


select * from bbf_fpn_server."fpn_table'') select * from openquery(''bbf_fpn_server'', ''select * from master".sys.databases
GO
~~START~~
varchar#!#int#!#int#!#varbinary#!#datetime#!#tinyint#!#varchar#!#tinyint#!#nvarchar#!#bit#!#bit#!#bit#!#tinyint#!#nvarchar#!#bit#!#bit#!#bit#!#tinyint#!#nvarchar#!#bit#!#tinyint#!#nvarchar#!#tinyint#!#nvarchar#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit#!#uniqueidentifier#!#bit#!#tinyint#!#nvarchar#!#bit#!#bit#!#bit#!#bit#!#uniqueidentifier#!#uniqueidentifier#!#int#!#smallint#!#nvarchar#!#int#!#nvarchar#!#bit#!#bit#!#smallint#!#tinyint#!#nvarchar#!#int#!#int#!#nvarchar#!#bit#!#bit#!#bit#!#bit#!#bit#!#int#!#nvarchar#!#nvarchar#!#bit#!#bit#!#bit#!#bit#!#bit#!#bit
~~ERROR (Code: 33557097)~~

~~ERROR (Message: TDS client library error: Msg #: 911, Msg state: 1, Msg: database "fpn_table') select * from openq8c86d09e50d4f800f5a8c351ddbe1b23" does not exist, Server: BABELFISH, Process: , Line: 1, Level: 16)~~


-- SQL Injection in schema name
-- Try to inject SQL such that the final rewritten query looks like:
-- select * from openquery('bbf_fpn_server', 'select * from master.sys.tables') select * from openquery('bbf_fpn_server', 'select * from master.sys.databases')
-- Will throw error: relation is invalid
select * from bbf_fpn_server.master.[sys.tables'') select * from openquery(''bbf_fpn_server'', ''select * from master.sys].databases
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: TDS client library error: Msg #: 33557097, Msg state: 1, Msg: relation "master_sys.tables') select * fr465ba21cd478dfdbfd9c4c52873fc1ec.databases" does not exist, Server: BABELFISH, Process: , Line: 1, Level: 16)~~


select * from bbf_fpn_server.master."sys.tables'') select * from openquery(''bbf_fpn_server'', ''select * from master.sys".databases
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: TDS client library error: Msg #: 33557097, Msg state: 1, Msg: relation "master_sys.tables') select * fr465ba21cd478dfdbfd9c4c52873fc1ec.databases" does not exist, Server: BABELFISH, Process: , Line: 1, Level: 16)~~


-- SQL Injection in object name
-- Try to inject SQL such that the final rewritten query looks like:
-- select * from openquery('bbf_fpn_server', 'select * from master.sys.tables') select * from openquery('bbf_fpn_server', 'select * from master.sys.databases')
-- Will throw error: relation is invalid
select * from bbf_fpn_server.master.sys.[tables'') select * from openquery(''bbf_fpn_server'', ''select * from master.sys.databases]
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: TDS client library error: Msg #: 33557097, Msg state: 1, Msg: relation "sys.tables') select * from openquer6fae7895a55a5b386bac33a1b4ac3386" does not exist, Server: BABELFISH, Process: , Line: 1, Level: 16)~~


select * from bbf_fpn_server.master.sys."tables'') select * from openquery(''bbf_fpn_server'', ''select * from master.sys.databases"
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: TDS client library error: Msg #: 33557097, Msg state: 1, Msg: relation "sys.tables') select * from openquer6fae7895a55a5b386bac33a1b4ac3386" does not exist, Server: BABELFISH, Process: , Line: 1, Level: 16)~~


DROP TABLE fpn_table_insert_into
DROP TABLE fpn_table_select_into
DROP TABLE fpn_table
DROP VIEW four_part_names_vu_verify_view
GO
